<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pandemic</string>
    <string name="board_description">game board</string>
    <string name="delete">Delete Saved Player</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="enter_names">Enter Player Names</string>
    <string name="four_player">Four Players</string>
    <string-array name="game_menu_array">
        <item>Move Player</item>
        <item>Take Action</item>
        <item>Build Research Station</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="game_overview">Game Overview</string>
    <string name="game_rules">How To Play</string>
    <string name="game_settings">Settings</string>
    <string name="hard">Hard</string>
    <string name="insanity">Insanity</string>
    <string name="new_game">New Game</string>
    <string name="next">Next</string>
    <string name="normal">Normal</string>
    <string name="num_players">Number of Players</string>
    <string name="play">Play!</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="player_three">Player 3</string>
    <string name="player_four">Player 4</string>
    <string name="recent_players">Recent Players</string>
    <string name="select_one">Select Player 1</string>
    <string name="select_two">Select Player 2</string>
    <string name="select_three">Select Player 3</string>
    <string name="select_four">Select Player 4</string>
    <string name="single_icon">Single Person Icon</string>
    <string name="three_player">Three Players</string>
    <string name="two_player">Two Players</string>
    <string name="zero">0</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>
