<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_options_background"
    android:orientation="vertical" >
        
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5" />
    
    <Button
        android:id="@+id/newGameButton"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:text="@string/new_game" />

	<Button 
	    android:id="@+id/gameRulesButton"
	    style="@style/MenuButton"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:text="@string/game_rules" />
	
    <Button
        android:id="@+id/settingsButton"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:text="@string/game_settings" />
    
    <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1" />  -->

</LinearLayout>
