<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pan_menu_screen_name"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/num_players"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"
        android:textSize="30sp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5" />
      
    <Button
        android:id="@+id/twoPlayerButton"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/two_player_icon"
        android:drawableStart="@drawable/two_player_icon"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="10dp"
        android:text="@string/two_player" />

	<Button 
	    android:id="@+id/threePlayerButton"
	    style="@style/AppButton"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/three_player_icon"
        android:drawableStart="@drawable/three_player_icon"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="10dp"
        android:text="@string/three_player" />
	
    <Button
        android:id="@+id/fourPlayerButton"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/four_player_icon"
        android:drawableStart="@drawable/four_player_icon"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="15dp"
        android:text="@string/four_player" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1" />

</LinearLayout>
