<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pan_menu_screen_name"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/game_overview"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"
        android:textSize="30sp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp" >
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp" >
            
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:enabled="false"
	        	android:focusable="false"
	        	android:src="@drawable/one_player_icon"
	        	android:contentDescription="@string/single_icon" />
            
            <TextView android:id="@+id/player_one_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp" />
            
        </LinearLayout>
        
        <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="45dp"
            android:layout_marginEnd="45dp" >
            
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:enabled="false"
	        	android:focusable="false"
	        	android:src="@drawable/one_player_icon"
	        	android:contentDescription="@string/single_icon" />
            
            <TextView android:id="@+id/player_two_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp" />
            
        </LinearLayout>
        
    </LinearLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp" >
	            
	        <ImageView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
	            android:enabled="false"
		     	android:focusable="false"
		     	android:src="@drawable/one_player_icon"
		     	android:contentDescription="@string/single_icon" />
	        
	        <TextView android:id="@+id/player_three_name"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="@android:color/white"
	            android:gravity="center_horizontal"
	            android:layout_marginTop="5dp" />
	            
	    </LinearLayout>
	    
	    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5" />
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginRight="45dp"
            android:layout_marginEnd="45dp" >
	            
	        <ImageView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
	            android:enabled="false"
		     	android:focusable="false"
		     	android:src="@drawable/one_player_icon"
		     	android:contentDescription="@string/single_icon" />
	        
	        <TextView android:id="@+id/player_four_name"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="@android:color/white"
	            android:gravity="center_horizontal"
	            android:layout_marginTop="5dp" />
	            
	    </LinearLayout>
	    
	</LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:layout_gravity="bottom" 
        android:gravity="center_horizontal" >
    
        <TextView android:id="@+id/difficulty_level"
        	android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="60dp"
	        android:layout_marginRight="60dp"
	        android:layout_marginBottom="5dp"
	        android:textSize="20sp"
	        android:gravity="center_horizontal"
	        android:background="@android:color/white" />
        
        <Button android:id="@+id/play_button"
        	style="@style/AppButton"
        	android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="60dp"
	        android:layout_marginRight="60dp"
	        android:text="@string/play" />
                
    </LinearLayout>

</LinearLayout>
